unpackaged/main/default/objects/Documento__c/Documento__c.object-meta.xml
<CustomObject>
    <label>Documento</label>
    <nameField>
        <displayFormat>3-{0000000000}</displayFormat>
        <label>Documento</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Documentos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>