unpackaged/main/default/objects/Documento__c/fields/Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Comercial__c</fullName>
    <label>Cobranza Comercial.</label>
    <referenceTo>Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Documentos</relationshipLabel>
    <relationshipName>Documentos</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>