unpackaged/main/default/objects/Documento__c/fields/Cobranza_Comercial_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Cobranza_Comercial_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cobranza Comercial</label>
    <referenceTo>Cobranza_Comercial__c</referenceTo>
    <relationshipLabel>Documentos (Cobranza Comercial)</relationshipLabel>
    <relationshipName>Documentos1</relationshipName>
    <type>Lookup</type>
</CustomField>