unpackaged/main/default/objects/Documento__c/fields/Documento__c.field-meta.xml
<CustomField>
    <fullName>Documento__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Documento__c/&quot;&amp; Id &amp;&quot;/view&quot;, Name &amp; &quot; - &quot; &amp; TEXT(Tipo__c) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Documento</label>
    <type>Text</type>
</CustomField>