unpackaged/main/default/objects/Documento__c/fields/Estatus__c.field-meta.xml
<CustomField>
    <fullName>Estatus__c</fullName>
    <label>Estatus</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABIERTO</fullName>
            </value>
            <value>
                <fullName>CANCELADO</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
            <value>
                <fullName>EN_TRANSITO</fullName>
                <label>EN TRÁNSITO</label>
            </value>
            <value>
                <fullName>FALLO_EN_AR</fullName>
                <label>FALLO EN AR</label>
            </value>
            <value>
                <fullName>PARCIAL</fullName>
            </value>
            <value>
                <fullName>RECHAZADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>