unpackaged/main/default/objects/Documento__c/fields/Estatus_AR__c.field-meta.xml
<CustomField>
    <fullName>Estatus_AR__c</fullName>
    <label>Estatus AR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EXITO_AR</fullName>
                <label>ÉXITO AR</label>
            </value>
            <value>
                <fullName>FALLO_AR</fullName>
                <label>FALLO AR</label>
            </value>
            <value>
                <fullName>PENDIENTE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>