unpackaged/main/default/objects/Documento__c/fields/Estatus_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Estatus_de_Pago__c</fullName>
    <formula>IF(Pagado__c  &amp;&amp; Saldo__c  &lt;= 0, &quot;SALDADO&quot;, 
	    IF(Fecha_Vencimiento__c  &lt; TODAY(), &quot;VENDIDO&quot;,
								 &quot;ABIERTO&quot;
								)
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Estatus de Pago</label>
    <type>Text</type>
</CustomField>