unpackaged/main/default/objects/Documento__c/fields/Fecha_Documento__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Documento__c</fullName>
    <formula>CreatedDate</formula>
    <label>Fecha del Documento</label>
    <type>Date</type>
</CustomField>