unpackaged/main/default/objects/Documento__c/fields/Flag_Valor_Operacion__c.field-meta.xml
<CustomField>
    <fullName>Flag_Valor_Operacion__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flag Valor Operacion</label>
    <type>Checkbox</type>
</CustomField>