unpackaged/main/default/objects/Documento__c/fields/Flag_Valor_Operacion_Formula__c.field-meta.xml
<CustomField>
    <fullName>Flag_Valor_Operacion_Formula__c</fullName>
    <formula>CASE(TEXT(Tipo__c), 
      &quot;PAGARE_FINANCIERA&quot;,&quot;Si&quot;,  
	     &quot;PAGARE_ENGANCHE&quot;,&quot;Si&quot;,
	     &quot;PAGARE_POSTVENTA&quot;,&quot;Si&quot;,
	     &quot;PAGARE_SUBSIDIO&quot;,&quot;Si&quot;,
	     &quot;PAGARE_SEGURO FINANCIERA&quot;,&quot;Si&quot;,
	     &quot;PAGARE_REESTRUCTURA POST VENTA&quot;,&quot;Si&quot;,
	     &quot;PAGARE_FONDO DE GARANTÍA&quot;,&quot;Si&quot;,
				  &quot;No&quot;
				)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag Valor Operación</label>
    <type>Text</type>
</CustomField>