unpackaged/main/default/objects/Documento__c/fields/IdFacturaAr__c.field-meta.xml
<CustomField>
    <fullName>IdFacturaAr__c</fullName>
    <externalId>true</externalId>
    <label>IdFacturaAr</label>
    <length>50</length>
    <type>Text</type>
</CustomField>