unpackaged/main/default/objects/Documento__c/fields/Importe_Aplicado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Aplicado__c</fullName>
    <description>Monto del importe que ya fue aplicado con NC(s) o recibo(s) del importe</description>
    <label>Importe Aplicado2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>