unpackaged/main/default/objects/Documento__c/fields/Importe_Aplicado_rollup__c.field-meta.xml
<CustomField>
    <fullName>Importe_Aplicado_rollup__c</fullName>
    <label>Importe Aplicado</label>
    <summarizedField>Aplicacion_Pago__c.IMPORTE_APLICADO__c</summarizedField>
    <summaryFilterItems>
        <field>Aplicacion_Pago__c.Estatus_Aplicacion__c</field>
        <operation>equals</operation>
        <value>Cerrado</value>
    </summaryFilterItems>
    <summaryForeignKey>Aplicacion_Pago__c.Documento__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>