unpackaged/main/default/objects/Documento__c/fields/Indicador_Estatus__c.field-meta.xml
<CustomField>
    <fullName>Indicador_Estatus__c</fullName>
    <formula>IMAGE( CASE( Estatus_de_Pago__c,
&quot;SALDADO&quot;, &quot;/img/samples/flag_green.gif&quot;,
&quot;ABIERTO&quot;, &quot;/img/samples/flag_yellow.gif&quot;,
&quot;VENDIDO&quot;, &quot;/img/samples/flag_red.gif&quot;,
&quot;/s.gif&quot;), &quot;Indicador Estatus&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Indicador Estatus</label>
    <type>Text</type>
</CustomField>