unpackaged/main/default/objects/Documento__c/fields/No__c.field-meta.xml
<CustomField>
    <fullName>No__c</fullName>
    <displayFormat>2-{0000000000}</displayFormat>
    <label>No.</label>
    <type>AutoNumber</type>
</CustomField>