unpackaged/main/default/objects/Documento__c/fields/No_Documento_AR__c.field-meta.xml
<CustomField>
    <fullName>No_Documento_AR__c</fullName>
    <label>No. Documento AR</label>
    <length>40</length>
    <type>Text</type>
</CustomField>