unpackaged/main/default/objects/Documento__c/fields/No_Pago__c.field-meta.xml
<CustomField>
    <fullName>No_Pago__c</fullName>
    <label>No. Pago</label>
    <type>TextArea</type>
</CustomField>