unpackaged/main/default/objects/Documento__c/fields/Nombre_Pago__c.field-meta.xml
<CustomField>
    <fullName>Nombre_Pago__c</fullName>
    <label>Nombre Pago</label>
    <type>TextArea</type>
</CustomField>