unpackaged/main/default/objects/Documento__c/fields/Pagado__c.field-meta.xml
<CustomField>
    <fullName>Pagado__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Este chack se activa cuando el saldo del pagaré esta en $0</inlineHelpText>
    <label>Pagado</label>
    <type>Checkbox</type>
</CustomField>