unpackaged/main/default/objects/Documento__c/fields/Se_puede_Borrar__c.field-meta.xml
<CustomField>
    <fullName>Se_puede_Borrar__c</fullName>
    <formula>IF(Subestatus_Cobranza_Comercial__c &lt;&gt; &quot;EN_PROGRESO&quot;, FALSE,TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Se puede Borrar?</label>
    <type>Checkbox</type>
</CustomField>