unpackaged/main/default/objects/Documento__c/fields/Subestatus_Cobranza_Comercial__c.field-meta.xml
<CustomField>
    <fullName>Subestatus_Cobranza_Comercial__c</fullName>
    <formula>TEXT( Cobranza_Comercial__r.Sub_Estatus_Proceso__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subestatus Cobranza Comercial</label>
    <type>Text</type>
</CustomField>