unpackaged/main/default/objects/Documento__c/fields/Tiene_Aplicacion_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Tiene_Aplicacion_de_Pagos__c</fullName>
    <label>Tiene Aplicación de Pagos</label>
    <summaryForeignKey>Aplicacion_Pago__c.Documento__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>