unpackaged/main/default/objects/Documento__c/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <label>Tipo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>NC_AHORRO_VOLUNTARIO</fullName>
                <label>NC AHORRO VOLUNTARIO</label>
            </value>
            <value>
                <fullName>NC_BONIFICACION</fullName>
                <label>NC BONIFICACIÓN</label>
            </value>
            <value>
                <fullName>NC_CANCELACION_ESCRITURA</fullName>
                <label>NC CANCELACIÓN ESCRITURA</label>
            </value>
            <value>
                <fullName>NC_CANCELACION_PG_N</fullName>
                <label>NC CANCELACIÓN PG N</label>
            </value>
            <value>
                <fullName>NC_DEVOLUCION_NO_APLICA</fullName>
                <label>NC DEVOLUCIÓN NO APLICA</label>
            </value>
            <value>
                <fullName>NC_GASTO_AVALUO</fullName>
                <label>NC GASTO AVALÚO</label>
            </value>
            <value>
                <fullName>NC_GASTO_CREDITO_DIRECTO</fullName>
                <label>NC GASTO CRÉDITO DIRECTO</label>
            </value>
            <value>
                <fullName>NC_GASTOS_NOTARIALES</fullName>
                <label>NC GASTOS NOTARIALES</label>
            </value>
            <value>
                <fullName>NC_GASTOS_OPERATIVOS</fullName>
                <label>NC GASTOS OPERATIVOS</label>
            </value>
            <value>
                <fullName>NC_RECUPERACION_CARTERA</fullName>
                <label>NC RECUPERACIÓN CARTERA</label>
            </value>
            <value>
                <fullName>NC_REEMBOLSO_AHORRO_VOLUNTARIO</fullName>
                <label>NC REEMBOLSO AHORRO VOLUNTARIO</label>
            </value>
            <value>
                <fullName>NC_REEMBOLSO_CANCELACION</fullName>
                <label>NC REEMBOLSO CANCELACIÓN</label>
            </value>
            <value>
                <fullName>NC_REEMBOLSO_POR_ESCRITURA</fullName>
                <label>NC REEMBOLSO POR ESCRITURA</label>
            </value>
            <value>
                <fullName>NC_REESTRUCTURA_FINANCIERA</fullName>
                <label>NC REESTRUCTURA FINANCIERA</label>
            </value>
            <value>
                <fullName>NC_REESTRUCTURA_POST_VENTA</fullName>
                <label>NC REESTRUCTURA POST VENTA</label>
            </value>
            <value>
                <fullName>PAGARE_AHORRO_VOLUNTARIO</fullName>
                <label>PAGARÉ AHORRO VOLUNTARIO</label>
            </value>
            <value>
                <fullName>PAGARE_CANCELACION_DE_NC_GN</fullName>
                <label>PAGARÉ CANCELACIÓN DE NC GN</label>
            </value>
            <value>
                <fullName>PAGARE_DEVOLUCION_NO_APLICA</fullName>
                <label>PAGARÉ DEVOLUCIÓN NO APLICA</label>
            </value>
            <value>
                <fullName>PAGARE_ENGANCHE</fullName>
                <label>PAGARÉ ENGANCHE</label>
            </value>
            <value>
                <fullName>PAGARE_FINANCIERA</fullName>
                <label>PAGARÉ FINANCIERA</label>
            </value>
            <value>
                <fullName>PAGARE_FONDO_DE_GARANTIA</fullName>
                <label>PAGARÉ FONDO DE GARANTÍA</label>
            </value>
            <value>
                <fullName>PAGARE_GASTO_AVALUO</fullName>
                <label>PAGARÉ GASTO AVALÚO</label>
            </value>
            <value>
                <fullName>PAGARE_GASTO_CREDITO_DIRECTO</fullName>
                <label>PAGARÉ GASTO CRÉDITO DIRECTO</label>
            </value>
            <value>
                <fullName>PAGARE_GASTOS_NOTARIALES</fullName>
                <label>PAGARÉ GASTOS NOTARIALES</label>
            </value>
            <value>
                <fullName>PAGARE_GASTOS_OPERATIVOS</fullName>
                <label>PAGARÉ GASTOS OPERATIVOS</label>
            </value>
            <value>
                <fullName>PAGARE_POSTVENTA</fullName>
                <label>PAGARÉ POSTVENTA</label>
            </value>
            <value>
                <fullName>PAGARE_POSTVENTA_REESTRUCTURA_FINANCIERA</fullName>
                <label>PAGARÉ POSTVENTA REESTRUCTURA FINANCIERA</label>
            </value>
            <value>
                <fullName>PAGARE_PREVENTA</fullName>
                <label>PAGARÉ PREVENTA</label>
            </value>
            <value>
                <fullName>PAGARE_REEMBOLSO_CANCELACION</fullName>
                <label>PAGARÉ REEMBOLSO CANCELACIÓN</label>
            </value>
            <value>
                <fullName>PAGARE_REEMBOLSO_ESCRITURA</fullName>
                <label>PAGARÉ REEMBOLSO ESCRITURA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>