unpackaged/main/default/objects/Documento__c/fields/Tipo_de_Pago__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Pago__c</fullName>
    <label>Tipo de Pago</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bancos Banorte</fullName>
            </value>
            <value>
                <fullName>Bancos Santander</fullName>
            </value>
            <value>
                <fullName>Bancos Virtual</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
            <value>
                <fullName>Cheque SBC</fullName>
            </value>
            <value>
                <fullName>Efectivo</fullName>
            </value>
            <value>
                <fullName>Nota Credito</fullName>
            </value>
            <value>
                <fullName>Novacion</fullName>
            </value>
            <value>
                <fullName>Pago con Tarjeta</fullName>
            </value>
            <value>
                <fullName>Payment</fullName>
            </value>
            <value>
                <fullName>Tarjeta</fullName>
            </value>
            <value>
                <fullName>Transferencia</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>