unpackaged/main/default/objects/Documento__c/fields/Tipo_Documento__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Documento__c</fullName>
    <formula>RecordType.Name</formula>
    <label>Tipo de Documento</label>
    <type>Text</type>
</CustomField>