unpackaged/main/default/objects/Documento__c/fields/Titulacion__c.field-meta.xml
<CustomField>
    <fullName>Titulacion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Titulación</label>
    <referenceTo>Titulacion__c</referenceTo>
    <relationshipLabel>Documentos</relationshipLabel>
    <relationshipName>Documentos</relationshipName>
    <type>Lookup</type>
</CustomField>