unpackaged/main/default/objects/Documento__c/fields/Valor_de_la_Operaci_n__c.field-meta.xml
<CustomField>
    <fullName>Valor_de_la_Operaci_n__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Valor de la Operación</label>
    <type>Checkbox</type>
</CustomField>