unpackaged/main/default/objects/Documento__c/recordTypes/Factura.recordType-meta.xml
<RecordType>
    <fullName>Factura</fullName>
    <active>false</active>
    <label>FacturaNoSeUsa</label>
</RecordType>