unpackaged/main/default/objects/Documento__c/recordTypes/Nota_Credito.recordType-meta.xml
<RecordType>
    <fullName>Nota_Credito</fullName>
    <active>true</active>
    <label>Nota de Crédito</label>
</RecordType>