unpackaged/main/default/objects/Documento__c/recordTypes/Pagare.recordType-meta.xml
<RecordType>
    <fullName>Pagare</fullName>
    <active>true</active>
    <label>Factura</label>
</RecordType>