unpackaged/main/default/objects/Documento__c/recordTypes/Recibo.recordType-meta.xml
<RecordType>
    <fullName>Recibo</fullName>
    <active>false</active>
    <description>Pago realizado por el cliente o por la Financiera por motivo de la compra de la vivienda Javer</description>
    <label>Recibo de Pago</label>
</RecordType>