unpackaged/main/default/objects/Documento__c/validationRules/Creacion_APC.validationRule-meta.xml
<ValidationRule>
    <fullName>Creacion_APC</fullName>
    <active>true</active>
    <description>Usuario con permiso APC solo podrá crear pagarés o notas de crédito mientras Estatus de Proceso de Venta = Escriturado o Entregado</description>
    <errorConditionFormula>AND(
 $Profile.Name = &#39;APC&#39;,
 ISNEW(),
 Cobranza_Comercial__r.Estatus_Proceso__c &lt;&gt; &#39;ESCRITURADO&#39;,
 Cobranza_Comercial__r.Estatus_Proceso__c &lt;&gt; &#39;ENTREGADO&#39;
)</errorConditionFormula>
    <errorMessage>Solo puede crear el documento cuando el Estatus del Proceso de Venta es Escriturado o Entregado</errorMessage>
</ValidationRule>