unpackaged/main/default/objects/Documento__c/validationRules/Creacion_Cobranza_Comercial.validationRule-meta.xml
<ValidationRule>
    <fullName>Creacion_Cobranza_Comercial</fullName>
    <active>false</active>
    <description>Usuario con permiso Cobranza Comercial solo podrá crear pagarés o notas de crédito mientras Estatus de Proceso de Venta = Formalizado y Sub Estatus del Proceso = En Progreso</description>
    <errorConditionFormula>AND(
 $Profile.Name = &#39;Cobranza Comercial&#39;,
 ISNEW(),
 Cobranza_Comercial_Lookup__r.Estatus_Proceso__c &lt;&gt; &#39;FORMALIZADO&#39;,
 NOT(ISPICKVAL(Cobranza_Comercial_Lookup__r.Sub_Estatus_Proceso__c,&#39;EN_PROGRESO&#39;))
)</errorConditionFormula>
    <errorMessage>Solo puede crear el documento cuando el Estatus del Proceso de Venta es Formalizado y el Subestatus del proceso es En Progreso</errorMessage>
</ValidationRule>