unpackaged/main/default/objects/Documento__c/validationRules/Fecha_Vencimiento_Mayor_o_Igual_a_Hoy.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_Vencimiento_Mayor_o_Igual_a_Hoy</fullName>
    <active>true</active>
    <description>La fecha de Vencimiento debe ser mayor o igual a la fecha actual</description>
    <errorConditionFormula>!$User.is_Data_Migration_User__c &amp;&amp;
CASESAFEID($User.Id) != &#39;005o0000000k2XuAA&#39; &amp;&amp;
CASESAFEID($User.Id) != &#39;0050r000003K1yeAAC&#39; &amp;&amp; 
CASESAFEID($User.Id) != &#39;005o0000000k2XuAAI&#39; &amp;&amp;
IF(Subestatus_Cobranza_Comercial__c = &quot;CANCELADO&quot;, False,
			IF(Fecha_Vencimiento__c  &lt;  TODAY(), TRUE, FALSE)
		)</errorConditionFormula>
    <errorDisplayField>Fecha_Vencimiento__c</errorDisplayField>
    <errorMessage>La fecha de vencimiento debe ser mayor o igual a la fecha actual</errorMessage>
</ValidationRule>