unpackaged/main/default/objects/Documento__c/validationRules/Fecha_Vewncimiento_Menor_o_Igual_a_30Dia.validationRule-meta.xml
<ValidationRule>
    <fullName>Fecha_Vewncimiento_Menor_o_Igual_a_30Dia</fullName>
    <active>false</active>
    <description>La fecha de Vencimiento debe ser mayor a 30 dias de la fecha de Hoy</description>
    <errorConditionFormula>IF( Fecha_Vencimiento__c  &gt;  TODAY()+30, TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Fecha_Vencimiento__c</errorDisplayField>
    <errorMessage>La fecha de vencimiento debe ser Máximo 30 dias posteriores a la fecha actual</errorMessage>
</ValidationRule>