unpackaged/main/default/objects/Documento__c/validationRules/No_Valores_Negativos.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Valores_Negativos</fullName>
    <active>true</active>
    <description>No se aceptan valores negativos en Pagarés y Notas de Crédito</description>
    <errorConditionFormula>IF( Importe__c  &lt;  0, TRUE, FALSE)</errorConditionFormula>
    <errorDisplayField>Importe__c</errorDisplayField>
    <errorMessage>No se permiten importes negativos</errorMessage>
</ValidationRule>