unpackaged/main/default/objects/Documento__c/validationRules/Valores_Tipo_Nota_Credito_Usuarios_APC.validationRule-meta.xml
<ValidationRule>
    <fullName>Valores_Tipo_Nota_Credito_Usuarios_APC</fullName>
    <active>false</active>
    <description>Al perfil  APC se le permiten seleccionar solo ciertos tipos de notas de crédito</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &#39;Nota_Credito&#39;,
 $Profile.Name = &#39;APC&#39;,
 NOT(ISPICKVAL(Tipo__c, &#39;NC_AHORRO_VOLUNTARIO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_BONIFICACION&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_CANCELACION_PG_N&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_DEVOLUCION_NO_APLICA&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_GASTO_AVALUO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_GASTO_CREDITO_DIRECTO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_GASTOS_NOTARIALES&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_GASTOS_OPERATIVOS&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_REEMBOLSO_AHORRO_VOLUNTARIO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_REEMBOLSO_POR_ESCRITURA&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;NC_REESTRUCTURA_FINANCIERA&#39;))
)</errorConditionFormula>
    <errorDisplayField>Tipo__c</errorDisplayField>
    <errorMessage>No tiene permitido el tipo de nota de crédito seleccionado</errorMessage>
</ValidationRule>