unpackaged/main/default/objects/Documento__c/validationRules/Valores_Tipo_Pagare_Usuarios_Todos.validationRule-meta.xml
<ValidationRule>
    <fullName>Valores_Tipo_Pagare_Usuarios_Todos</fullName>
    <active>false</active>
    <description>Dependiendo del perfil se permiten seleccionar solo ciertos tipos de pagarés</description>
    <errorConditionFormula>AND(
 RecordType.DeveloperName = &#39;Pagare&#39;,
 $Profile.Name &lt;&gt; &#39;Administrador del sistema&#39;,
 $Profile.Name &lt;&gt; &#39;APC&#39;,
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_AHORRO_VOLUNTARIO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_DEVOLUCION_NO_APLICA&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_ENGANCHE&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_FINANCIERA&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_FONDO_DE_GARANTIA&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_GASTO_AVALUO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_GASTO_CREDITO_DIRECTO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_GASTOS_NOTARIALES&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_GASTOS_OPERATIVOS&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;PAGARE_SUBSIDIO&#39;)),
 NOT(ISPICKVAL(Tipo__c, &#39;REEMBOLSO_AHORRO_VOLUNTARIO&#39;))
)</errorConditionFormula>
    <errorDisplayField>Tipo__c</errorDisplayField>
    <errorMessage>No tiene permitido el tipo de pagaré seleccionado</errorMessage>
</ValidationRule>