unpackaged/main/default/objects/Documento__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Estatus__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Importe__c</columns>
    <columns>Importe_Aplicado_rollup__c</columns>
    <columns>Saldo__c</columns>
    <columns>Tiene_Aplicacion_de_Pagos__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tiene_Aplicacion_de_Pagos__c</field>
        <operation>greaterOrEqual</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Estatus__c</field>
        <operation>notEqual</operation>
        <value>CERRADO</value>
    </filters>
    <label>All</label>
</ListView>